kubernetes/apps/network/envoy-gateway/app/oauth-policy.sops.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: envoy-oauth-policy
  namespace: network
  annotations:
    home-ops.io/auth-mode: authentik
    home-ops.io/legacy-mode: available
spec:
  targetRefs:
    - group: ENC[AES256_GCM,data:boMNQuw5u7EGJuLzm4h104CLT9RcONxGSA==,iv:bb78i3MpAnrElmQ2l6axZflNBq41ydMeuJuJX3RSu0M=,tag:weaMH4luzhSyTj8ijtKn0Q==,type:str]
      kind: ENC[AES256_GCM,data:XYUaowT7Cg==,iv:D8zN/I+xf+eYXrj2UF+Cp6RXITdSLUy4Ii/jMO3g0FM=,tag:sIx7nqBu4eeH3xwCVksGcQ==,type:str]
      name: ENC[AES256_GCM,data:257F2n/E/KbtR18=,iv:ksUVSGuLvoL4pO+YokQUZY0jKktIYoL1qDcqw9s+NOA=,tag:lSSAsi9TPDaOmjNKqt4VMQ==,type:str]
  oidc:
    provider:
      issuer: ENC[AES256_GCM,data:9gL0BEXiST4WIsIkb35at0vYRIypoOKnsaGisJ8wmKGNIqGLfpFcTXJVEkkwbxb3ZbEaxbA=,iv:vI08SYozt7sy4yBO0xErefhvQeuJc/icBBLy1qcsiSA=,tag:wPkYZxBN5tiDmVyKsgg9hg==,type:str]
      authorizationEndpoint: ENC[AES256_GCM,data:Emy+f1BKjifJ4VdqSzu6FGu1b0Ad1CtWmot+VFv5rSHDSBNhqid4K/s3eEkZmEtSRvFE+cc7,iv:j39EUEeOBeyv/E7aYQi/5H00+TbX1K7PMAjD91Y5m1k=,tag:BA9YP7hjmK5riHw1sHeoxA==,type:str]
    clientID: ENC[AES256_GCM,data:VDA1cdFZZNtjuwDBAyySOX7ddXdE21qMP6vmf7sFL+xKeFcoTBL2lmaUbMBStV9WvphCUqlMnEW0nsFYEqdiiK+e8kRwoaSp,iv:OAbpggZ9iebMBnaml/gl7XrL9sVHYLKvCVvbC5aTENY=,tag:s5eljOGl5mD2dZgamXABig==,type:str]
    clientSecret:
      name: ENC[AES256_GCM,data:f3S3TkHAOolpPq+C+FOELvx8uQ==,iv:Uzot+BHNzx2rd8QZjgVx0Fpc2X+oV71S3rLhTg6JSyM=,tag:TwsasUluazt7qIS0AOG4gQ==,type:str]
      namespace: ENC[AES256_GCM,data:2gF4IAQnpg==,iv:yh5Lfo/ZrnUzjPW1VN3pNl5o/jw/mJKWfxUeGm48aM8=,tag:FNk/JAYnYW7RPwRSWw1REg==,type:str]
    redirectURL: ENC[AES256_GCM,data:6UIovCJxIxMOcEhpu6QBoYt5RvufUmgX06aQmhA2HicGo6lFWP58FT+lwnIA4A==,iv:h8eGDz0V0N9WpaBvCawCr2m1qKkB341WDFTrGEXAuNs=,tag:e/B9nlTEcuNX3g1DP9mXNQ==,type:str]
    logoutPath: ENC[AES256_GCM,data:GvZRWUR+tg==,iv:lj61InUcPvvgdGan0I9eKisxqk4GkkoFXlEy1ZVQCbY=,tag:B5KA21b8dLuPGSdRvhYwCQ==,type:str]
    cookieDomain: ENC[AES256_GCM,data:siy4mykq2UKOK8EygwFR7A==,iv:YSoFcZIWgBfzLBSYA5+b1NDpekIObfKZ/GqRegTBKhM=,tag:vGAsDNfqnMFP97Jo49z6rQ==,type:str]
    cookieNames:
      accessToken: ENC[AES256_GCM,data:9SuRbiBCa6sHCn4=,iv:0TlGQVc1NrAymLMfAGvUS5UO2o2han5XR+f2uHZ19fI=,tag:R80/rcMco4bbKwsBhhuFxQ==,type:str]
      idToken: ENC[AES256_GCM,data:FD+hl3R7xg==,iv:7hIOr9kDlqNQ+RTcW5ghglrcxBNJ1I8irnbTc2bs4e4=,tag:uB2wl1SVHVqgMo+MG/A2qg==,type:str]
    scopes:
      - ENC[AES256_GCM,data:ZFkVFCKe,iv:ZB2FRGAsotCgyfquzkTxTAYyEyhdY/5gl+7uxa9RfIE=,tag:xF4d8U344ng5SONGvSkIOg==,type:str]
      - ENC[AES256_GCM,data:jcgWRYE=,iv:GzUjEz+VChLEwI3RGpKGe9GVEuwgJEWnX1UBlTqV+vo=,tag:OhHJ8ruME0wHLuM5KrvS+A==,type:str]
      - ENC[AES256_GCM,data:uOO5C85ARQ==,iv:qe01grgsjk6yBh//HYLztanqwDdawbSui74Phm0XWdI=,tag:i52qap8ssMa6gTVP/ETS7Q==,type:str]
  jwt:
    providers:
      - name: ENC[AES256_GCM,data:sw4mgtqmSi/3,iv:CQhSgET+PaR9qQj4gSUd24HudodTisQXjFWkplNTP0A=,tag:l/LnDakbMDtoHeknnvp2xA==,type:str]
        issuer: ENC[AES256_GCM,data:/1q/u/2pSjYTFHr0iI4izGpJkSWkeH3a9HrGlk0ptRR6W6pVb01NtaKMSehFs8k08hGFzF8=,iv:NnWpLmq5d3rdwT7zLzn3OmN5FlgQqZNrXE8RuLYKXEA=,tag:d7ixEBPx9zs+jFp0mQIavA==,type:str]
        remoteJWKS:
          uri: ENC[AES256_GCM,data:X8KJbbrO38o/NbjJuCYoqhWXo2hXUvodywYjUTUWyldrWLnwInOFdZQPmc6Q7bpDkkRrvISmwJa3Ig==,iv:DJYhoSFK7Ups2K6oOg1hPdqSKTqhJV+++rjJwji4R0E=,tag:KKa9pDTVxzTMVNw30mb/4A==,type:str]
        extractFrom:
          cookies:
            - ENC[AES256_GCM,data:/1Bh+IMSQQ==,iv:MQg//SZojcjgdFlSrgQO+YCcw4ycADLFAmiOajpWXsc=,tag:usHSbiJwydHzw13ECCfbcw==,type:str]
          headers:
            - name: ENC[AES256_GCM,data:N48EQuNN434Qe1Ir/g==,iv:SiXEbqTZAzh4nOZ0b95H+kUAvDNxpkeB0BhRE1qmvZw=,tag:XIf4Z13ZagzggD4qpWUdYg==,type:str]
              valuePrefix: ENC[AES256_GCM,data:2hh8OpT5dQ==,iv:qrii1XfT9vdM/DqB+h6Qvw9YSfacOBiWKWZpS1VxqcQ=,tag:G8CezBw2x/dNtFxFaLXdcQ==,type:str]
          params:
            - ENC[AES256_GCM,data:jDJR+E/8QcGqTuLI,iv:OWi7IM9kPjaY7VS/mla9fI5+UAN78L5cPTQiAIPZQ0s=,tag:ubytKoJi0naD79FdecaXCA==,type:str]
  authorization:
    defaultAction: ENC[AES256_GCM,data:+Wz9wA==,iv:KIju7cdoFSXmBbqjKDijJXkQfyEPPVdHUC9xgmPoYYI=,tag:g7ld+tYWsFgH+LpkxJZ/rQ==,type:str]
    rules:
      - name: ENC[AES256_GCM,data:3kBzHrgBAed8/wLhYkGVvGsOMdCYKg==,iv:kQz6chmkVGp13rhFdpXpcTcHWhgBZBPQviPH8dhHJA0=,tag:Arxlr65qbk6LytgLTiS1Pg==,type:str]
        action: ENC[AES256_GCM,data:+xo7y5o=,iv:nKtw4k0auSH456cofUElGLE1nUnzzZLQTlubudUw70s=,tag:bByYrruuyPTVFAuemXrq9g==,type:str]
        principal:
          jwt:
            provider: ENC[AES256_GCM,data:nPieBJWzcgXh,iv:YyC2lq4Hm6ltlnL/dw0gIoUVKWU993ol0VQVwWD2ao8=,tag:yE2cgctlQDopxtLKgCLnKA==,type:str]
            claims:
              - name: ENC[AES256_GCM,data:RNmGyF0S,iv:d8CZZXaGbeL9hYmZLCnHUBU0x3AFiDHXikgtEOOwlpk=,tag:0rnwEXBAD9J+cx4AvERQVg==,type:str]
                values:
                  - ENC[AES256_GCM,data:pzoxPovbyjknU0Jq8jEfygVg,iv:rgOHagdItJ1G7wKbHwUS1zZahol9a+Thjl+ip5SkN80=,tag:jqSUV4AS1f5PLh9tHTM2/g==,type:str]
              - name: ENC[AES256_GCM,data:FZwZQ3ZOY3PDNpH+qLY=,iv:Leidwdqi8kjIiF5ZqWcYkV+JbeZO/4C3y+EjkuoYAYQ=,tag:h9n2Z5vha+a24F6ljtbzwA==,type:str]
                values:
                  - ENC[AES256_GCM,data:80IKNA==,iv:KM+TPidwmkvayrIX5EKBbogSmYAw38Is2/wJg0iJbTU=,tag:cmP9Aa7XvHKU2IjgOzVK1g==,type:str]
sops:
  age:
    - recipient: age1d7ltdyge970mha3gqyenf9mrn8ezg60nexy99vzndvl592q2zcxqkytdwd
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1SEVGeTlpRWdzdnZwampU
[...]
        dTW1ahuVajYc4G20FVJ3FVTDrA2KH7Y4qDfugwrgTCg4tQXW5GGsDA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-02T04:17:36Z"
  mac: ENC[AES256_GCM,data:xPagF/tZD5uFK5LiEaXWGwgK+ibCQTNhrCMO4hoJK+sCrQ4lYO+qWOHdjPWG/MKB8gEhuglqPx2CFBXVho5Iejz3CT4g4jSM7v+WY7Atk92N59CHq9u4tq0U+FmC6Yk2LvRYj/sKti8nEjmZyOxaXqqM4xaR98zBw3cg0IEQdUk=,iv:4URVxOL/71xdGF3IyPHPyKf5SJ6JVhiQ2xswq9cvUQA=,tag:0OSTO4wy6HCOan9hmWAVGA==,type:str]
  encrypted_regex: ^(spec)$
  mac_only_encrypted: true
  version: 3.12.1
