kubernetes/apps/network/envoy-gateway/app/remove-hook-annotations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: envoy-gateway-topology-injector.network
  annotations:
    helm.sh/hook: null
    helm.sh/hook-weight: null
    helm.sh/hook-delete-policy: null
